@@ -1,5 +1,16 @@
 2009-01-17  David Hyatt  <hyatt@apple.com>
 
+        Inline FrameLoader::client().
+
+        Reviewed by Oliver Hunt
+
+        * WebCore.base.exp:
+        * loader/FrameLoader.cpp:
+        * loader/FrameLoader.h:
+        (WebCore::FrameLoader::client):
+
+2009-01-17  David Hyatt  <hyatt@apple.com>
+
         Inline some Image methods for speed.  Fix CachedImage's addClient method to just use isNull rather
         than needlessly creating a rect.
 
